<resources>
    <string name="zhongkuohao">[</string>
    <string name="zhongkuohao_msg">条]</string>
    <string name="app_name">YiChat</string>
    <string name="app_chat">会话</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="address_book">通讯录</string>
    <string name="attach_video">视频</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="button_logout">退出登录</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="search_header">搜</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="notification_alive">通知长存保活</string>
    <string name="notification_lisenter">通知监听保活</string>
    <string name="newnotify">开启新消息通知</string>
    <string name="notify_set">新消息设置</string>
    <string name="numal_set">常用设置</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="Network_error">网络出错</string>
    <string name="Making_sure_your_location">正在确定你的位置...</string>
    <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="The_file_is_not_greater_than_10_m">文件不能大于10M</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="Is_landing">正在登录...</string>
    <string name="Login_failed">登录失败</string>
    <string name="Logoff_notification">下线通知</string>
    <string name="The_video_to_start">录像开始</string>
    <string name="Whether_to_send">是否发送？</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="Are_logged_out">正在退出登录..</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="were_mentioned">[有人@我]</string>
    <string name="chatroom_allow_owner_leave"> 允许聊天室群主离开</string>
    <string name="title_user_profile">个人资料</string>
    <string name="service_not_response">评论失败</string>
    <string name="input_talks">请输入评论...</string>
    <string name="good">赞</string>
    <string name="yesterday">昨天</string>
    <string name="The_day_before_yesterday">前天</string>
    <string name="Days_ago">天前</string>
    <string name="long_long_ago">很久以前</string>
    <string name="An_hour_ago">小时前</string>
    <string name="minutes_ago">分钟前</string>
    <string name="just">刚刚</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="the_current_network">当前网络不可用，请检查网络设置</string>
    <string name="delete_msg_when_exit_group">退出群组时删除聊天数据</string>
    <string name="auto_accept_group_invitation">自动同意群组加群邀请</string>
    <string name="adaptive_video_encode">视频自适应码率编码</string>
    <string name="prompt_live_topic">直播主题</string>
    <string name="str_live_info">请创建一个直播主题(不超过20个字符)</string>
    <string name="watch_live_info">观看直播</string>
    <string name="title_activity_pre_start_live">开始直播</string>
    <string name="str_live_watcher_number">观看人数：%1$d</string>
    <string name="str_hoster_leave">主播已离开，2秒后关闭页面</string>
    <string name="str_hoster_not_live">主播还未开启直播, 2秒后关闭页面</string>
    <string name="live_theme_not_null">直播主题不能为空</string>
    <string name="Maximum_word_limit_has_been_reached">已到达最大字数限制</string>
    <string name="str_connect_hoster">连麦</string>
    <string name="str_apply_connect_line">%1$s 请求连线</string>
    <string name="str_agree">同意</string>
    <string name="str_refused">拒绝</string>
    <string name="str_line_disconnect">连线已断开</string>
    <string name="str_hoster_refused">主播拒绝连线</string>
    <string name="str_connect_full">连线已达最大人数</string>
    <string name="str_apply_anyrtc_account">请去AnyRTC官网申请账号,如有疑问请联系客服!</string>
    <string name="str_exit">退出</string>
    <string name="str_live_stop">您正在进行直播，确定要退出吗？</string>
    <string name="str_line_hangup">您正在与主播进行连麦互动，确定要退出吗？</string>
    <string name="str_no_audio_record_permission">缺少录音权限</string>
    <string name="str_no_camera_permission">缺少摄像头权限</string>
    <string name="str_anyrtc_ok">正常</string>
    <string name="str_unknow_exception">未知错误</string>
    <string name="str_anyrtc_exception">SDK调用异常</string>
    <string name="str_anyrtc_net_err">网络错误</string>
    <string name="str_anyrtc_live_err">直播出错</string>
    <string name="str_anyrtc_bad_req">服务不支持的错误请求</string>
    <string name="str_anyrtc_auth_fail">认证失败</string>
    <string name="str_anyrtc_no_user">此开发者信息不存在</string>
    <string name="str_anyrtc_sql_err">服务器内部数据库错误</string>
    <string name="str_anyrtc_arrears">账号欠费</string>
    <string name="str_anyrtc_locked">账号被锁定</string>
    <string name="str_anyrtc_force_exit">强制离开</string>
    <string name="str_barrage">弹幕</string>
    <string name="str_send">发送</string>
    <string name="str_online">&#160;来了，欢迎~</string>
    <string name="str_switch_camera">切换摄像头</string>
    <string name="say_some_to_people">和大家说点什么</string>
    <string name="logining">登录中...</string>
    <string name="Account_does_not_exist">账号不存在</string>
    <string name="Incorrect_password">密码不正确</string>
    <string name="Account_has_been_disabled">账号已被禁用</string>
    <string name="Server_busy">服务器繁忙请重试...</string>
    <string name="login_success">登录成功</string>
    <string name="tel_is_not_allow_null">手机号不能为空</string>
    <string name="pwd_is_not_allow_null">密码不能为空</string>
    <string name="please_input_true_mobile">请输入正确的手机号码!</string>
    <string name="Incorrect_phone_number_format">手机号码格式不正确!</string>
    <string name="i_am">我是</string>
    <string name="press_top">点击上面的</string>
    <string name="btn_means_agree">按钮,即表示你同意</string>
    <string name="Secret_agreement">《YiChat软件许可及服务协议》</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="register">用户注册</string>
    <string name="confirmpassword">确认密码</string>
    <string name="nickname">昵称</string>
    <string name="code_is_send">验证码已经发送</string>
    <string name="has_code">获取验证码</string>
    <string name="Two_input_password">两次输入的密码不一致，请重新输入!</string>
    <string name="Is_the_registered">正在注册...</string>
    <string name="Registered_successfully">注册成功!</string>
    <string name="country_code">+86</string>
    <string name="are_reset_password">正在重置密码...</string>
    <string name="password_reset_success">密码重置成功！</string>
    <string name="password_reset_failed">密码重置失败!</string>
    <string name="new_password_cannot_be_empty">新密码不能为空!</string>
    <string name="mobile_not_be_null">手机号不能为空</string>
    <string name="mobile_is_register">该手机号码已被注册...</string>
    <string name="image_manager">相册</string>
    <string name="Initiate_group_chat">发起群聊</string>
    <string name="zero_group">0个群聊</string>
    <string name="group_size">个群聊</string>
    <string name="scanning">扫一扫</string>
    <string name="new_friend">新的朋友</string>
    <string name="add_friend">添加好友</string>
    <string name="me">我</string>
    <string name="bottom_find">发现</string>
    <string name="secret_signal_or_phone_number">ID/手机号</string>
    <string name="countries_and_regions">国家</string>
    <string name="china">中国</string>
    <string name="you_mobile">你的手机号码</string>
    <string name="input_pwd">填写密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="login_by_mobile">使用手机号登录</string>
    <string name="example">例如：陈晨</string>
    <string name="Verification_Code">验证码</string>
    <string name="new_password">新密码</string>
    <string name="Head_portrait">头像</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="Personal_signature">个性签名</string>
    <string name="modify_name">更改名字</string>
    <string name="Detailed_information">详细资料</string>
    <string name="mobile">手机号</string>
    <string name="send_msg">发送消息</string>
    <string name="add_to_contacts">添加到通讯录</string>
    <string name="pass_or_no_by_send">你需要发送验证申请，等对方通过</string>
    <string name="Minute">分钟</string>
    <string name="day">日</string>
    <string name="downwaiting">正在下载文件请稍后</string>
    <string name="group_chat">群聊</string>
    <string name="send_successful">发送请求成功,等待对方验证</string>
    <string name="Request_add_buddy_failure">请求添加好友失败!</string>
    <string name="Refused">已拒绝</string>
    <string name="Move_into_blacklist_success">移入黑名单成功</string>
    <string name="Move_into_blacklist_failure">移入黑名单失败</string>
    <string name="deleting">正在删除...</string>
    <string name="Delete_failed">删除失败:</string>
    <string name="Is_moved_into_blacklist">正在移入黑名单...</string>
    <string name="change_groupName">修改群名称</string>
    <string name="change_group_desc">修改群描述</string>
    <string name="Modify_the_group_name_successful">修改群名称成功</string>
    <string name="group_groupname_dot_18">群名称不能超过18个字符</string>
    <string name="group_groupdesc_dot_100">群描述不能超过100个字符</string>
    <string name="Is_sending_a_request">正在发送请求...</string>
    <string name="can_not_connect_chat_server_connection">连接不到聊天服务器</string>
    <string name="Is_to_create_a_group_chat">正在创建群聊...</string>
    <string name="Failed_to_create_groups">创建群组失败!</string>
    <string name="success_to_create_groups">创建群组成功!</string>
    <string name="Failed_to_download_file">下载文件失败:</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="Has_agreed_to_your_friend_request">已同意你的好友请求</string>
    <string name="Request_to_add_you_as_a_friend">请求加你为好友</string>
    <string name="Are_agree_with">正在同意...</string>
    <string name="Delete_the_contact">删除联系人</string>
    <string name="update_success">更新成功</string>
    <string name="update_groups_failed">更新群聊失败!</string>
    <string name="update_groups_success">更新群聊成功!</string>
    <string name="no_more_messages">没有更多的消息了</string>
    <string name="revoke_content">你撤回了一条消息</string>
    <string name="search">搜索</string>
    <string name="accept">接受</string>
    <string name="str_hangup">挂断</string>
    <string name="str_speaker">免提</string>
    <string name="str_answer">接听</string>
    <string name="str_close_camera">关摄像头</string>
    <string name="str_close_audio">关声音</string>
    <string name="bd_map">百度地图</string>
    <string name="gd_map">高德地图</string>
    <string name="gg_map">谷歌地图</string>
    <string name="tc_map">腾讯地图</string>
    <string name="calling_waitting">正在等待对方接受邀请...</string>
    <string name="switch_to_audio">切换到语音聊天</string>
    <string name="check_again">邀请</string>
    <string name="feeback_call">联系方式</string>
    <string name="feebak_phone">联系电话:</string>
    <string name="phone">15375355202</string>
    <string name="feebak_qq">联系QQ:</string>
    <string name="qq">84543217</string>
    <string name="feebak_email">联系邮箱:</string>
    <string name="email">84543217@qq.com</string>
    <string name="promit_notice">提示:电话点击可直接拨打,QQ可点击联系,邮箱长按可复制.</string>
</resources>