<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pop_transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/divider_list"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_map_baidu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f0f0f0"
                android:text="@string/bd_map" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="@color/transparent" />

            <Button
                android:id="@+id/btn_map_gaode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f0f0f0"
                android:text="@string/gd_map" />
            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="@color/transparent" />

            <Button
                android:id="@+id/btn_map_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f0f0f0"
                android:text="@string/gg_map" />
            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="@color/transparent" />

            <Button
                android:id="@+id/btn_map_tencent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f0f0f0"
                android:text="@string/tc_map" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_cancle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f0f0f0"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>