<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_delete_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/prompt"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="5dp"
        android:background="@color/gray_pressed" />

    <TextView
        android:id="@+id/tv_delete_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/Delete_the_contact"
        android:textSize="16sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="10dp"
        android:background="@color/gray_pressed" />
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:id="@+id/tv_cancle"
            android:text="@string/cancel"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_height="match_parent" />
        <View
            android:id="@+id/view_line_dialog"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray_pressed" />
        <TextView
            android:id="@+id/tv_ok"
            android:text="@string/ok"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/gray_pressed" />
</LinearLayout>